--- a/index.html
+++ b/index.html
@@ -60,23 +60,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="con1">
 			<a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://koreatk.github.io/img/btn_2_0.png"></a>
 		</div>
-<!--
-		<div class="btn">
-			<img src="https://koreatk.github.io/img/title.jpg" usemap="#s1" alt="">
-			<div class="btn_box">
-			<span><a href="tel:010-9469-0590"><img src="https://koreatk.github.io/img/btn1.jpg" style="padding:5%"></a></span>
-			<span><a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://koreatk.github.io/img/btn2.jpg" style="padding:5%"></a></span>
-			</div>
-		</div>
--->
 		<div class="con1">
-			<img src="https://koreatk.github.io/img/content1.jpg" usemap="#s2" alt="">
+			<img src="https://koreatk.github.io/img/content1.png" usemap="#s2" alt="">
 		</div>
 		<div class="con2">
-			<img src="https://koreatk.github.io/img/content2.jpg" usemap="#s3" alt="">
+			<img src="https://koreatk.github.io/img/content2.png" usemap="#s3" alt="">
 		</div>
 		<div class="con3">
-			<img src="https://koreatk.github.io/img/content3.jpg" usemap="#s4" alt="">
+			<img src="https://koreatk.github.io/img/content3.png" usemap="#s4" alt="">
 		</div>
 		
 		<div class="con1">
