--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div class="contents">
 	<div class="top"><div class="top_img"><img src="https://koreatk.github.io/img/top_img_1.png"></div></div>
+	<div class="top"><div class="top_img"><img src="https://koreatk.github.io/img/top_img_2.png"></div></div>
 	<div class="wrap">
 		<div class="con1">
 			<a href="tel:010-9469-1051"><img src="https://koreatk.github.io/img/btn_1_0.png"></a>
