--- a/index.html
+++ b/index.html
@@ -18,18 +18,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="keyword" content="한국티켓">
 <META property="og:type" content="website">
 <META property="og:title" content="한국티켓">
-<meta name="description" content="쉽고 빠른 소액결제 현금화 한국티켓과 함께">
+<meta name="description" content="쉽고 빠른 비상금 한국티켓과 함께">
 <meta property="og:image" content="https://koreatk.github.io/img/meta_img.png">
 <META property="og:url" content="https://koreatk.github.io/">
 <link rel="canonical" href="https://koreatk.github.io/">
 <link rel="shortcut icon" href="favicon/favicon.ico">
-<link href="css/style.css?ver=7" type="text/css" rel="stylesheet">
+<link href="./css/style.css" type="text/css" rel="stylesheet">
 <script src="javascript/script.js" defer type="text/javascript"></script>
 <script src="javascript/jquery-3.6.0.js" type="text/javascript"></script>
 <span itemscope="" itemtype="http://schema.org/Organization">
 <link itemprop="url" href="https://koreatk.github.io/">
 </span>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
+    <script type="text/javascript" src="./js/jquery.counterup.min.js"></script>
+    <script type="text/javascript" src="./js/swiper-bundle.min.js"></script>
+    <script type="text/javascript" src="./js/script.js"></script>
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
 <meta name="facebook-domain-verification" content="4wsyzowohj8ongkim5nu36c7eehmma" />	
@@ -53,7 +59,50 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div class="contents">
 	<div class="top"><div class="top_img"><img src="https://koreatk.github.io/img/top_img_1.png"></div></div>
-	<div class="top"><div class="top_img"><img src="https://koreatk.github.io/img/top_img_2.png"></div></div>
+	<section id="trust_count" class="mt_01">
+            <div class="inner">
+			<img src="https://koreatk.github.io/img/top_img_2.png">
+                <div class="real_time">
+                    <div class="today">
+                        <div class="today_won">
+                            <p class="won" id="counter">6,585,000</p>
+                        </div>
+                    </div>
+                    <div class="total_wrap">
+                        <div class="total">
+                            <div class="total_won">
+                                <p class="won" id="counter2">157,462,000</p>
+                            </div>
+                        </div>
+                        <strong id="date_time"></strong>
+                    </div>
+
+                </div>
+                <ul class="percent_wrap">
+                    <li>
+                        <div class="ct_percent">
+                            <div class="ct_p_wrap_1">
+                                <p id="counter_sv1">75</p><span>%</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="ct_percent">
+                            <div class="ct_p_wrap_2">
+                                <p id="counter_sv2">85</p><span>%</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="ct_percent">
+                            <div class="ct_p_wrap_3">
+                                <p id="counter_sv3">63</p><span>%</span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+	</section>
 	<div class="wrap">
 		<div class="con1">
 			<a href="tel:010-9469-1051"><img src="https://koreatk.github.io/img/btn_1_0.png"></a>
@@ -127,5 +176,68 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		 setInterval(function(){ tick () }, 3000);
         </script>
 		
+		<script>
+    window.counter = function() {
+        // this refers to the html element with the data-scroll-showCallback tag
+        var span = this.querySelector('span');
+        var current = parseInt(span.textContent);
+
+        span.textContent = current + 1;
+    };
+
+    document.addEventListener('DOMContentLoaded', function() {
+        var trigger = new ScrollTrigger({
+            addHeight: true
+        });
+    });
+    </script>
+	<script type="text/javascript">
+//today_status
+jQuery(document).ready(function($) {
+    $('#counter').counterUp({
+        delay: 50,
+        time: 1500
+    });
+});
+</script>
+<script type="text/javascript">
+jQuery(document).ready(function($) {
+    $('#counter2').counterUp({
+        delay: 50,
+        time: 1500
+    });
+});
+</script>
+<script type="text/javascript">
+//percent_wrap
+jQuery(document).ready(function($) {
+    $('#counter_sv1').counterUp({
+        delay: 50,
+        time: 2000
+    });
+});
+</script>
+<script type="text/javascript">
+jQuery(document).ready(function($) {
+    $('#counter_sv3').counterUp({
+        delay: 50,
+        time: 2000
+    });
+});
+</script>
+<script type="text/javascript">
+jQuery(document).ready(function($) {
+    $('#counter_sv2').counterUp({
+        delay: 50,
+        time: 2000
+    });
+});
+</script>
+
 </body>
+
+
+
+
 </html>
+
