--- a/index.html
+++ b/index.html
@@ -1,57 +1,234 @@
+
+
 <!DOCTYPE html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>아온티켓</title>
-<link href="css/style.css" type="text/css" rel="stylesheet">
-<script src="javascript/script.js" defer type="text/javascript"></script>
-<script src="javascript/jquery-1.12.3.js" type="text/javascript"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<style>
-		footer { padding: 33px 0; text-align: center; font-size: 15px; line-height: 1.8em; color:#ffffff; background:#525252; }
-	</style>
-	
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MXPP9C5');</script>
+<!-- End Google Tag Manager -->
+
+<title>한국티켓</title>
+<META name="description" content="한국티켓">
+<meta name="keyword" content="한국티켓">
+<META property="og:type" content="website">
+<META property="og:title" content="한국티켓">
+<meta name="description" content="쉽고 빠른 소액결제 현금화 한국티켓과 함께">
+<meta property="og:image" content="https://koreatk.github.io/img/meta_img.png">
+<META property="og:url" content="https://koreatk.github.io/">
+<link rel="canonical" href="https://koreatk.github.io/">
+<link rel="shortcut icon" href="favicon/favicon.ico">
+<link href="./css/style.css" type="text/css" rel="stylesheet">
+<script src="javascript/script.js" defer type="text/javascript"></script>
+<script src="javascript/jquery-3.6.0.js" type="text/javascript"></script>
+<span itemscope="" itemtype="http://schema.org/Organization">
+<link itemprop="url" href="https://koreatk.github.io/">
+</span>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
+    <script type="text/javascript" src="./js/jquery.counterup.min.js"></script>
+    <script type="text/javascript" src="./js/swiper-bundle.min.js"></script>
+    <script type="text/javascript" src="./js/script.js"></script>
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
+<meta name="facebook-domain-verification" content="4wsyzowohj8ongkim5nu36c7eehmma" />	
+
+
+<script type="text/javascript">
+
+if (document.location.protocol == 'http:') {
+
+    document.location.href = document.location.href.replace('http:', 'https:');
+
+}
+
+</script>
 </head>
 
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MXPP9C5"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div class="contents">
-	<div class="top"><div class="top_img"><img src="img/top_img.jpg"></div></div>
+	<div class="top"><div class="top_img"><img src="https://koreatk.github.io/img/top_img_1.png"></div></div>
+	<section id="trust_count" class="mt_01">
+            <div class="inner">
+			<img src="https://koreatk.github.io/img/top_img_2.png">
+                <div class="real_time">
+                    <div class="today">
+                        <div class="today_won">
+                            <p class="won" id="counter">6,585,000</p>
+                        </div>
+                    </div>
+                    <div class="total_wrap">
+                        <div class="total">
+                            <div class="total_won">
+                                <p class="won" id="counter2">157,462,000</p>
+                            </div>
+                        </div>
+                        <strong id="date_time"></strong>
+                    </div>
+
+                </div>
+                <ul class="percent_wrap">
+                    <li>
+                        <div class="ct_percent">
+                            <div class="ct_p_wrap_1">
+                                <p id="counter_sv1">75</p><span>%</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="ct_percent">
+                            <div class="ct_p_wrap_2">
+                                <p id="counter_sv2">85</p><span>%</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="ct_percent">
+                            <div class="ct_p_wrap_3">
+                                <p id="counter_sv3">63</p><span>%</span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+	</section>
 	<div class="wrap">
-		<div class="btn">
-			<img src="img/btn_tit.jpg">
-			<div class="btn_box">
-			<span><a href="tel:010-2391-8411"><img src="img/btn1.jpg"></a></span>
-			<span><a href="http://qr.kakao.com/talk/SnIQioJxSr0Y1ymgt4MFz62GhAA-"><img src="img/btn2.jpg"></a></span>
-			</div>
+		<div class="con1">
+			<a href="tel:010-9469-1051"><img src="https://koreatk.github.io/img/btn_1_0.png"></a>
 		</div>
 		<div class="con1">
-			<img src="img/con1.jpg">
+			<a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://koreatk.github.io/img/btn_2_0.png"></a>
+		</div>
+		<div class="con1">
+			<img src="https://koreatk.github.io/img/content1.png" usemap="#s2" alt="">
 		</div>
 		<div class="con2">
-			<img src="img/con2.jpg">
+			<img src="https://koreatk.github.io/img/content2.png" usemap="#s3" alt="">
 		</div>
 		<div class="con3">
-			<img src="img/con3.jpg">
+			<img src="https://koreatk.github.io/img/content3.png" usemap="#s4" alt="">
 		</div>
-		<div class="con4">
-			<img src="img/con4.jpg">
+		
+		<div class="con1">
+			<a href="tel:010-9469-1051"><img src="https://koreatk.github.io/img/btn_1_0.png"></a>
 		</div>
-			<div class="btn">
-			<img src="img/btn_tit.jpg">
+		<div class="con1">
+			<a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://koreatk.github.io/img/btn_2_0.png"></a>
+		</div>
+<!--
+		<div class="btn">
+			<img src="https://koreatk.github.io/img/title.jpg" usemap="#s1" alt="">
 			<div class="btn_box">
-			<span><a href="tel:010-2391-8411"><img src="img/btn1.jpg"></a></span>
-			<span><a href="http://qr.kakao.com/talk/SnIQioJxSr0Y1ymgt4MFz62GhAA-"><img src="img/btn2.jpg"></a></span>
+			<span><a href="tel:010-9469-1051"><img src="https://koreatk.github.io/img/btn1.jpg" style="padding:5%"></a></span>
+			<span><a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://koreatk.github.io/img/btn2.jpg" style="padding:5%"></a></span>
 			</div>
 		</div>
+-->
 	</div>
 </div>
+    <!--
+	<div class="popup-area">
+		<div class="popup-body">
+			<img src="https://koreatk.github.io/img/popup.jpg" alt="">
+			<button type="button" class="close-modal"></button>
+		</div>
+		<div class="bg"></div>
+	</div>
+-->
+	<script type="text/javascript">
+		$('.popup-area a').click(function(){
+		  $('.popup-area').hide();
+		});
+	</script>
+		 <script>
+			window.onload = function () {
+				function tick(){
+					$('#estimate_marquee li:first').slideUp( function () { $(this).appendTo($('#estimate_marquee')).slideDown(); }); 
+					$('#estimate_marquee2 li:first').slideUp( function () { $(this).appendTo($('#estimate_marquee2')).slideDown(); }); 
+				}
+				setInterval(function(){ tick () }, 3000);
 
-		<footer>
-		상호 : 아온티켓
-		대표전화 : 010-2391-8411
-		<br>
-		카카오톡 : AOTK 대표자 : 최준호<br>
-		Copyright 아온티켓. All rights reserved.
-		</footer>
+
+			}
+			
+				$(function(){
+					$('.close-modal').click(function(){
+						$('.popup-area').css('display','none');
+					});
+				});
+        </script>
+		 <script>
+		 function tick(){
+			$('#estimate_marquee li:first').slideUp( function () { $(this).appendTo($('#estimate_marquee')).slideDown(); }); 
+			$('#estimate_marquee2 li:first').slideUp( function () { $(this).appendTo($('#estimate_marquee2')).slideDown(); }); 
+		 }
+		 setInterval(function(){ tick () }, 3000);
+        </script>
 		
+		<script>
+    window.counter = function() {
+        // this refers to the html element with the data-scroll-showCallback tag
+        var span = this.querySelector('span');
+        var current = parseInt(span.textContent);
+
+        span.textContent = current + 1;
+    };
+
+    document.addEventListener('DOMContentLoaded', function() {
+        var trigger = new ScrollTrigger({
+            addHeight: true
+        });
+    });
+    </script>
+	<script type="text/javascript">
+//today_status
+jQuery(document).ready(function($) {
+    $('#counter').counterUp({
+        delay: 50,
+        time: 1500
+    });
+});
+</script>
+<script type="text/javascript">
+jQuery(document).ready(function($) {
+    $('#counter_sv2').counterUp({
+        delay: 50,
+        time: 1500
+    });
+});
+</script>
+<script type="text/javascript">
+//percent_wrap
+jQuery(document).ready(function($) {
+    $('#counter_sv1').counterUp({
+        delay: 50,
+        time: 2000
+    });
+});
+</script>
+<script type="text/javascript">
+jQuery(document).ready(function($) {
+    $('#counter_sv3').counterUp({
+        delay: 50,
+        time: 2000
+    });
+});
+</script>
 </body>
+
+
+
+
 </html>
+
