--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <META property="og:type" content="website">
 <META property="og:title" content="한국티켓">
 <meta name="description" content="쉽고 빠른 소액결제 현금화 한국티켓과 함께">
-<meta property="og:image" content="https://koreatk.github.io/img/meta_img.png">
-<META property="og:url" content="https://koreatk.github.io/">
-<link rel="canonical" href="https://koreatk.github.io/">
+<meta property="og:image" content="https://xn--3e0b315d0uc22c.kr/img/meta_img.png">
+<META property="og:url" content="https://xn--3e0b315d0uc22c.kr/">
+<link rel="canonical" href="https://xn--3e0b315d0uc22c.kr/">
 <link rel="shortcut icon" href="favicon/favicon.ico">
 <link href="./css/style.css" type="text/css" rel="stylesheet">
 <script src="javascript/script.js" defer type="text/javascript"></script>
 <script src="javascript/jquery-3.6.0.js" type="text/javascript"></script>
 <span itemscope="" itemtype="http://schema.org/Organization">
-<link itemprop="url" href="https://koreatk.github.io/">
+<link itemprop="url" href="https://xn--3e0b315d0uc22c.kr/">
 </span>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -58,10 +58,10 @@ if (document.location.protocol == 'http:') {
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div class="contents">
-	<div class="top"><div class="top_img"><img src="https://koreatk.github.io/img/top_img_1.png"></div></div>
+	<div class="top"><div class="top_img"><img src="https://xn--3e0b315d0uc22c.kr/img/top_img_1.png"></div></div>
 	<section id="trust_count" class="mt_01">
             <div class="inner">
-			<img src="https://koreatk.github.io/img/top_img_2.png">
+			<img src="https://xn--3e0b315d0uc22c.kr/img/top_img_2.png">
                 <div class="real_time">
                     <div class="today">
                         <div class="today_won">
@@ -105,33 +105,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</section>
 	<div class="wrap">
 		<div class="con1">
-			<a href="tel:010-9469-1051"><img src="https://koreatk.github.io/img/btn_1_0.png"></a>
+			<a href="tel:010-9469-1051"><img src="https://xn--3e0b315d0uc22c.kr/img/btn_1_0.png"></a>
 		</div>
 		<div class="con1">
-			<a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://koreatk.github.io/img/btn_2_0.png"></a>
+			<a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://xn--3e0b315d0uc22c.kr/img/btn_2_0.png"></a>
 		</div>
 		<div class="con1">
-			<img src="https://koreatk.github.io/img/content1.png" usemap="#s2" alt="">
+			<img src="https://xn--3e0b315d0uc22c.kr/img/content1.png" usemap="#s2" alt="">
 		</div>
 		<div class="con2">
-			<img src="https://koreatk.github.io/img/content2.png" usemap="#s3" alt="">
+			<img src="https://xn--3e0b315d0uc22c.kr/img/content2.png" usemap="#s3" alt="">
 		</div>
 		<div class="con3">
-			<img src="https://koreatk.github.io/img/content3.png" usemap="#s4" alt="">
+			<img src="https://xn--3e0b315d0uc22c.kr/img/content3.png" usemap="#s4" alt="">
 		</div>
 		
 		<div class="con1">
-			<a href="tel:010-9469-1051"><img src="https://koreatk.github.io/img/btn_1_0.png"></a>
+			<a href="tel:010-9469-1051"><img src="https://xn--3e0b315d0uc22c.kr/img/btn_1_0.png"></a>
 		</div>
 		<div class="con1">
-			<a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://koreatk.github.io/img/btn_2_0.png"></a>
+			<a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://xn--3e0b315d0uc22c.kr/img/btn_2_0.png"></a>
 		</div>
 <!--
 		<div class="btn">
-			<img src="https://koreatk.github.io/img/title.jpg" usemap="#s1" alt="">
+			<img src="https://xn--3e0b315d0uc22c.kr/img/title.jpg" usemap="#s1" alt="">
 			<div class="btn_box">
-			<span><a href="tel:010-9469-1051"><img src="https://koreatk.github.io/img/btn1.jpg" style="padding:5%"></a></span>
-			<span><a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://koreatk.github.io/img/btn2.jpg" style="padding:5%"></a></span>
+			<span><a href="tel:010-9469-1051"><img src="https://xn--3e0b315d0uc22c.kr/img/btn1.jpg" style="padding:5%"></a></span>
+			<span><a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://xn--3e0b315d0uc22c.kr/img/btn2.jpg" style="padding:5%"></a></span>
 			</div>
 		</div>
 -->
@@ -140,7 +140,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!--
 	<div class="popup-area">
 		<div class="popup-body">
-			<img src="https://koreatk.github.io/img/popup.jpg" alt="">
+			<img src="https://xn--3e0b315d0uc22c.kr/img/popup.jpg" alt="">
 			<button type="button" class="close-modal"></button>
 		</div>
 		<div class="bg"></div>
