--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <META property="og:url" content="https://xn--3e0b315d0uc22c.kr/">
 <link rel="canonical" href="https://xn--3e0b315d0uc22c.kr/">
 <link rel="shortcut icon" href="favicon/favicon.ico">
-<link href="./css/style.css" type="text/css" rel="stylesheet">
+<link href="https://xn--3e0b315d0uc22c.kr/css/style.css" type="text/css" rel="stylesheet">
 <script src="javascript/script.js" defer type="text/javascript"></script>
 <script src="javascript/jquery-3.6.0.js" type="text/javascript"></script>
 <span itemscope="" itemtype="http://schema.org/Organization">
