--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</section>
 	<div class="wrap">
 		<div class="con1">
-			<a href="tel:010-9469-1051"><img src="https://xn--3e0b315d0uc22c.kr/img/btn_1_0.png"></a>
+			<a href="tel:010-2694-1441"><img src="https://xn--3e0b315d0uc22c.kr/img/btn_1_0.png"></a>
 		</div>
 		<div class="con1">
-			<a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://xn--3e0b315d0uc22c.kr/img/btn_2_0.png"></a>
+			<a href="http://qr.kakao.com/talk/0cpk9wLppTH7RjambVIZxCFvsnc-"><img src="https://xn--3e0b315d0uc22c.kr/img/btn_2_0.png"></a>
 		</div>
 		<div class="con1">
 			<img src="https://xn--3e0b315d0uc22c.kr/img/content1.png" usemap="#s2" alt="">
@@ -121,17 +121,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 		
 		<div class="con1">
-			<a href="tel:010-9469-1051"><img src="https://xn--3e0b315d0uc22c.kr/img/btn_1_0.png"></a>
+			<a href="tel:010-2694-1441"><img src="https://xn--3e0b315d0uc22c.kr/img/btn_1_0.png"></a>
 		</div>
 		<div class="con1">
-			<a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://xn--3e0b315d0uc22c.kr/img/btn_2_0.png"></a>
+			<a href="http://qr.kakao.com/talk/0cpk9wLppTH7RjambVIZxCFvsnc-"><img src="https://xn--3e0b315d0uc22c.kr/img/btn_2_0.png"></a>
 		</div>
 <!--
 		<div class="btn">
 			<img src="https://xn--3e0b315d0uc22c.kr/img/title.jpg" usemap="#s1" alt="">
 			<div class="btn_box">
-			<span><a href="tel:010-9469-1051"><img src="https://xn--3e0b315d0uc22c.kr/img/btn1.jpg" style="padding:5%"></a></span>
-			<span><a href="http://qr.kakao.com/talk/ZZcz6yN1OdMRPQQMaINE5zfY61I-"><img src="https://xn--3e0b315d0uc22c.kr/img/btn2.jpg" style="padding:5%"></a></span>
+			<span><a href="tel:010-2694-1441"><img src="https://xn--3e0b315d0uc22c.kr/img/btn1.jpg" style="padding:5%"></a></span>
+			<span><a href="http://qr.kakao.com/talk/0cpk9wLppTH7RjambVIZxCFvsnc-"><img src="https://xn--3e0b315d0uc22c.kr/img/btn2.jpg" style="padding:5%"></a></span>
 			</div>
 		</div>
 -->
@@ -225,6 +225,14 @@ jQuery(document).ready(function($) {
     });
 });
 </script>
+	
+	<div class="popup-area">
+		<div class="popup-body">
+			<img src="https://xn--3e0b315d0uc22c.kr/img/popup.jpg" alt="">
+			<button type="button" class="close-modal"></button>
+		</div>
+		<div class="bg"></div>
+	</div>
 </body>
 
 
